src/objects/Employee_History_Archive__c.object
<CustomObject>
    <label>Employee History Archive</label>
    <nameField>
        <displayFormat>EHA-{000000}</displayFormat>
        <label>Employee History Archive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee History Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <externalId>true</externalId>
        <label>Employee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_Created_Date__c</fullName>
        <label>Record Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>History_Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_Id__c</fullName>
        <externalId>true</externalId>
        <label>History Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>History_New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_User_Id__c</fullName>
        <externalId>true</externalId>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>